--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-
-div {
-  background-color: #1A1A1D;
+body, html {
+  margin: 0px;
+  overflow-x: hidden;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: rgba(214, 214, 214, 0.6);
 }
 
 
@@ -18,13 +20,18 @@ div {
   display: grid;
   justify-content: center;
   text-align: center;
+
+  
 }
 
 .cardText {
-  
+  background-color: aliceblue;
   align-items: center;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .cart {
@@ -40,9 +47,8 @@ div {
   position: relative;
   display: grid; 
   grid-template-columns: auto auto auto;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .main {
@@ -57,22 +63,35 @@ div {
 }
 
 .modal {
-  top: 50%;
+  top: 20%;
   left: 40%;
-  height: 400px;
+  height: fit-content;
   width: 300px;
   border-radius: 10px;
-  background-color: whitesmoke; 
+  background-color: aliceblue; 
   position: fixed;
   color:#1A1A1D;
   padding: 20px;
-  flex: flexbox;
-  flex-direction: row;
-  
+  display: grid;
+  margin-left: 10px;
+  text-align: center;
 }
 
+.modal button {
+  background-color: rgba(26, 255, 255, .6); 
+  padding: 10px;
+  border-radius: 15px;
+}
+
+
+.modalButtons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+
 .products {
-  color:whitesmoke;
+  color: rgb(61, 61, 61);
   position: relative;
   width: 100%;
 
@@ -81,10 +100,6 @@ div {
 a{
   text-decoration: none;
   color:whitesmoke;
-}
-
-h1 {
-  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 
@@ -103,10 +118,6 @@ nav{
   min-height: 10vh;
 }
 
-nav h1 {
-  color: white;
-}
-
 
 .nav-Links {
   width: 50%;
@@ -118,10 +129,10 @@ nav h1 {
 
 button {
   background-color: transparent;
-  padding: 10px;
-  border-radius: 25px;
+  padding: 5px;
+  width: fit-content;
   border-style: none;
-  color: aliceblue;
+  color: rgb(25,25,25);
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -141,4 +152,58 @@ img:hover {
 #modalCheckout {
   float: right;;
   background-color: #1A1A1D;
+}
+
+nav {
+  width: 90%;
+  border-bottom: 1px lightgray solid;
+  color: grey;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  background-color: aliceblue;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+}
+
+h1 {
+  width: fit-content;
+  font-family: 'Julius Sans One', sans-serif;
+  color: rgb(61, 61, 61);
+}
+
+
+ul {
+  list-style-type: none;
+  display: flex;
+}
+
+#lhs-links{
+  float: left;
+}
+
+#rhs-links {
+  width: fit-content;
+  left: 90;
+}
+
+li{
+  margin: 10px;
+}
+
+.tea-card {
+  background-size: cover;
+  background-position: center;
+  width: 20vw;
+  height: 50vh;
+  border-radius: 25px;
+  margin-bottom: 50px;
+
+}
+
+footer {
+  background-color: aliceblue;
+  height: 10vh;
+  width: 90%;
+  margin: 0 auto;
 }
